[package]
name = "arcadedb-rs"
version = "0.0.0"
edition = "2021"



[dependencies]
reqwest= {version ="0.11", features= ["json"]}
anyhow= "1"
thiserror= "1"
serde = {version = "1", features =["derive"]}
serde_json = "1"
async-trait = "0.1"


[dev-dependencies]
tokio= {version="1", features=["full"]}
uuid = {version = "1", features = ["v4", "serde"]}
serde_test = "1"
